// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VxgApp.ts should allow a custom id 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="inspire"
>
  <div class="v-application--wrap">
  </div>
</div>
`;

exports[`VxgApp.ts should match a snapshot 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="app"
>
  <div class="v-application--wrap">
  </div>
</div>
`;
